--- a/integration/docker-compose.yml
+++ b/integration/docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.1'
 
 services:
   generator:
-    image: my-registry:55000/gen:ci-1
+    image: my-registry:55000/gen:ci-${GENERATOR_BUILD_NUMBER-1}
     # ports:
     #   - "8080:80"
   mail:
@@ -11,5 +11,8 @@ services:
     #   - "8025:8025"
 
   integration:
-      image: my-registry:55000/gen:integration-1
-      build: .
+    image: my-registry:55000/gen:integration-${BUILD_NUMBER-1}
+    build: .
+    environment:
+      - TEAMCITY_PROJECT_NAME
+       
